style. 調整editorconfig 和增加使用 Prettier調整格式
