# src/Routers/userRouter.ts
@@ -1,15 +1,14 @@
-import express from "express";
-import * as UserController from "../controllers/userController";
+import express from 'express';
+import * as UserController from '../controllers/userController';
 
 const router = express.Router();
 
-router.get("/search", UserController.GetUserDetail);
-router.get("/list", UserController.GetAllUsers);
-router.get("/register", (req, res) => {
-    res.render("register");
-  });
+router.get('/search', UserController.GetUserDetail);
+router.get('/list', UserController.GetAllUsers);
+router.get('/register', (req, res) => {
+  res.render('register');
+});
 
-router.post("/register", UserController.Register);
-
+router.post('/register', UserController.Register);
 
 export default router;
